test_files/netlist_footer_cmp/valid/valid_case_02_a.net
V1 VCC 0 12
R1 VCC C 4.7k
R2 VCC B 100k
R3 B 0 20k
Q1 C B 0 0 NPN
.op
* npn bias comment
.backanno
.end
