test_files/netlist_footer_cmp/invalid/invalid_case_09_a.net
V1 VCC 0 12
R1 VCC C 3.3k
R2 VCC B 91k
R3 B 0 15k
Q1 C B 0 0 NPN
.param GAIN=10
.tran 0 5m
.backanno
.end
